<resources>
    <string name="app_name">Cyclebuild</string>
    <string name="nav_home">HOME</string>
    <string name="nav_bike">BICYCLES</string>
    <string name="nav_parts">PARTS</string>
    <string name="cyclebuild">CYCLEBUILD</string>
    <string name="welcome_to_cyclebuild">WELCOME TO CYCLEBUILD</string>
    <string name="part_compatibility_checker">PART COMPATIBILITY CHECKER</string>
    <string name="about_us">ABOUT US</string>
    <string name="what_is_cyclebuild">What is Cyclebuild?</string>
    <string name="about_us_text">Mechanics all over have experienced the issue with part compatibility. We think something will work, but then something gets in the way and we\'re out of luck. On Cyclebuild, the community can weigh in and verify compatibility on a variety of vehicles, so you don\'t have to worry about compatibility guesswork any longer.</string>
    <string name="your_vehicles">YOUR VEHICLES</string>
    <string name="suggested_parts">SUGGESTED PARTS</string>
    <string name="parts_title">PARTS</string>
    <string name="vehicles_title">VEHICLES</string>
    <string name="vehicle_title">VEHICLE</string>
    <string name="installed_parts">INSTALLED PARTS</string>
    <string name="compatible_parts">COMPATIBLE PARTS</string>
    <string name="no_parts_installed">NO PARTS INSTALLED</string>
    <string name="no_suggested">NONE</string>
    <string name="no_compatible_vehicles">NO COMPATIBLE VEHICLES</string>
    <string name="no_results">NO RESULTS</string>
    <string name="no_vehicles">NO VEHICLES</string>
    <string name="add_vehicle">ADD VEHICLE</string>
    <string name="add_to_vehicle">ADD TO VEHICLE</string>
    <string name="part_title">PART</string>
    <string name="compatibility_text">COMPATIBILITY</string>
    <string name="close_dialog">CLOSE</string>
    <string name="compatible_part">Compatible</string>
    <string name="not_compatible_part">Not Compatible</string>
    <string name="select_vehicle">Select a vehicle to add this part to</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="part_added_successfully">PART ADDED SUCCESSFULLY</string>
</resources>