<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleContainer"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyclebuild"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/titleContainer"
            app:layout_constraintEnd_toEndOf="@id/titleContainer"
            app:layout_constraintTop_toTopOf="@id/titleContainer"
            app:layout_constraintBottom_toBottomOf="@id/titleContainer"/>

        <ImageView
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_sign_out"
            app:layout_constraintEnd_toEndOf="@id/titleContainer"
            app:layout_constraintTop_toTopOf="@id/titleContainer"
            app:layout_constraintBottom_toBottomOf="@id/titleContainer"
            app:tint="@color/red" />

        <TextView
            android:id="@+id/your_vehicles_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/your_vehicles"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <include
            android:id="@+id/empty_vehicles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/empty_list"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/your_vehicles_text"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/your_vehicles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/your_vehicles_text"
            tools:listitem="@layout/bicycle_list_item"/>

        <TextView
            android:id="@+id/suggested_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/suggested_parts"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/your_vehicles"/>

        <include
            android:id="@+id/empty_parts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/empty_list"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suggested_text"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggested_parts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suggested_text"
            tools:listitem="@layout/part_list_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
